feat: секции с перестановками
