# docs/swagger.json
@@ -1092,26 +1092,29 @@
             "type": "object",
             "properties": {
                 "answer": {
-                    "$ref": "#/definitions/create.AnswerSectionAnswerPost"
+                    "$ref": "#/definitions/create.AnswerSection"
                 },
                 "choice": {
-                    "$ref": "#/definitions/create.ChoiceSectionAnswerPost"
+                    "$ref": "#/definitions/create.Choice"
                 },
                 "code": {
-                    "$ref": "#/definitions/create.CodeSectionAnswerPost"
+                    "$ref": "#/definitions/create.Code"
                 },
                 "id": {
                     "type": "string"
                 },
                 "multiChoice": {
-                    "$ref": "#/definitions/create.MultichoiceSectionAnswerPost"
+                    "$ref": "#/definitions/create.MultiChoice"
+                },
+                "permutation": {
+                    "$ref": "#/definitions/create.Permutation"
                 },
                 "shortAnswer": {
-                    "$ref": "#/definitions/create.ShortAnswerSectionAnswerPost"
+                    "$ref": "#/definitions/create.ShortAnswer"
                 }
             }
         },
-        "create.AnswerSectionAnswerPost": {
+        "create.AnswerSection": {
             "type": "object",
             "properties": {
                 "answer": {
@@ -1131,7 +1134,7 @@
                 }
             }
         },
-        "create.ChoiceSectionAnswerPost": {
+        "create.Choice": {
             "type": "object",
             "properties": {
                 "answer": {
@@ -1165,6 +1168,17 @@
                 }
             }
         },
+        "create.Code": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "string"
+                },
+                "lang": {
+                    "type": "string"
+                }
+            }
+        },
         "create.CodeSection": {
             "type": "object",
             "required": [
@@ -1174,17 +1188,6 @@
                 "question": {
                     "type": "string",
                     "maxLength": 5000
-                }
-            }
-        },
-        "create.CodeSectionAnswerPost": {
-            "type": "object",
-            "properties": {
-                "answer": {
-                    "type": "string"
-                },
-                "lang": {
-                    "type": "string"
                 }
             }
         },
@@ -1267,6 +1270,17 @@
                 }
             }
         },
+        "create.MultiChoice": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "create.MultiChoiceSectionPost": {
             "type": "object",
             "required": [
@@ -1296,17 +1310,6 @@
                 }
             }
         },
-        "create.MultichoiceSectionAnswerPost": {
-            "type": "object",
-            "properties": {
-                "answer": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
         "create.Page": {
             "type": "object",
             "required": [
@@ -1323,6 +1326,41 @@
                 },
                 "order": {
                     "type": "number"
+                }
+            }
+        },
+        "create.Permutation": {
+            "type": "object",
+            "required": [
+                "answer"
+            ],
+            "properties": {
+                "answer": {
+                    "type": "array",
+                    "maxItems": 8,
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "create.PermutationSection": {
+            "type": "object",
+            "required": [
+                "answer",
+                "question"
+            ],
+            "properties": {
+                "answer": {
+                    "type": "array",
+                    "maxItems": 8,
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "question": {
+                    "type": "string",
+                    "maxLength": 500
                 }
             }
         },
@@ -1369,6 +1407,9 @@
                 "pageId": {
                     "type": "string"
                 },
+                "permutation": {
+                    "$ref": "#/definitions/create.PermutationSection"
+                },
                 "shortanswer": {
                     "$ref": "#/definitions/create.ShortAnswerSectionPost"
                 },
@@ -1377,7 +1418,7 @@
                 }
             }
         },
-        "create.ShortAnswerSectionAnswerPost": {
+        "create.ShortAnswer": {
             "type": "object",
             "properties": {
                 "answer": {
